--- a/2_CSS/09_레이아웃스타일3.html
+++ b/2_CSS/09_레이아웃스타일3.html
@@ -48,5 +48,92 @@
     <div class="fixed-area">
         <a href="#body-top">위쪽으로 이동</a>
     </div>
+
+
+    <hr>
+
+    <h2>형태 구조 선택자/일반 구조 선택자 이용하기</h2>
+
+    <div class="div_test">
+        <div class="div_child">
+            <div></div>
+            <div></div>
+            <div></div>
+            <div></div>
+        </div>
+        <div class="div_child">
+            <div></div>
+            <div></div>
+            <div></div>
+            <div></div>
+        </div>
+        <div class="div_child div_first">
+            <div></div>
+            <div></div>
+            <div></div>
+            <div></div>
+        </div>
+        <div class="div_child div_first div_green">
+            <div></div>
+            <div></div>
+            <div></div>
+            <div></div>
+        </div>
+        <div class="div_child div_first div_green div_green2">
+            <div></div>
+            <div></div>
+            <div></div>
+            <div></div>
+        </div>
+    </div>
+​
+<!------------------------------------------------------------------------------------->
+​
+    <table class="table_test">
+        <tr>
+            <td></td>
+            <td></td>
+            <td></td>
+            <td></td>
+            <td></td>
+        </tr>
+        <tr>
+            <td></td>
+            <td></td>
+            <td></td>
+            <td></td>
+            <td></td>
+        </tr>
+        <tr class="tr_test">
+            <td></td>
+            <td></td>
+            <td></td>
+            <td></td>
+            <td></td>
+        </tr>
+        <tr class="tr_test tr_test2">
+            <td></td>
+            <td></td>
+            <td></td>
+            <td></td>
+            <td></td>
+        </tr>
+        <tr class="tr_test tr_test2 tr_test3">
+            <td></td>
+            <td></td>
+            <td></td>
+            <td></td>
+            <td></td>
+        </tr>
+    </table>
+    
+<hr>
+
+    <table>
+        
+    </table>​
+
+
+    <div style="height: 500px; border: 0px;"></div>
 </body>
 </html>
