--- a/2_CSS/14_유튜브.html
+++ b/2_CSS/14_유튜브.html
@@ -227,14 +227,15 @@
                 </section>
             </section>
             <section>
-                <button><img src="https://cdn.pixabay.com/photo/2017/01/03/19/41/forest-1950402_1280.jpg"></button>
+                <button><img src="https://cdn.pixabay.com/photo/2016/02/18/18/37/puppy-1207816_1280.jpg"></button>
                 <section class="menu-content">
                     <div>
-                        💎저작권없는음악 팝송 유튜브
-                        브금 무료음원 BGM 배경음악...
+                        [Playlist] 너무 좋은데... 괜찮으시
+                        겠어요?ㅣ지루한 일상, 가볍게...
                     </div>
-                    <div>나눔뮤직 Nanum Sound</div>
-                    <div>조회수 1.3만회 • 3년전</div>
+                    <div>essential;</div>
+                    <div>조회수 205만회 • 2년전</div>
+                </section>
             </section>
             <section></section>
             <section></section>
