--- a/3_Javascript/html/03_연산자.html
+++ b/3_Javascript/html/03_연산자.html
@@ -97,9 +97,19 @@
     
     <button onclick="check()">확인하기</button>
 
+    <hr>
+
+    <h3>연습문제</h3>
+ 
+    <div>
+      이름 : <input type="text" id="userName"> <br>
+      나이 : <input type="number" id="userAge"> <br>
+      성별 : <input type="text" id="userGender"> <br>
+      <button type="button" onclick="printJSObject()">JS 객체로 출력하기</button>
+    </div>
 
 
-    <div class="" style="height: 500px; background-color: transparent; border: none;"></div>
+
     <script src="../js/03_연산자.js"></script>
 </body>
 </html>
