--- a/3_Javascript/JS문제집/3.로또판생성하기.html
+++ b/3_Javascript/JS문제집/3.로또판생성하기.html
@@ -36,7 +36,6 @@
     <button id="createBtn">로또판 생성</button>
     <div id="lottoBoard"></div>
 
-    <script>
-    </script>
+    <script src="../JS문제집/js/3.로또판생성하기.js"></script>
 </body>
 </html>
