--- a/3_Javascript/JS문제집/5.크기,색상,내용지정해서등록하기.html
+++ b/3_Javascript/JS문제집/5.크기,색상,내용지정해서등록하기.html
@@ -39,7 +39,6 @@
 
     <div id="result"></div>
 
-    <script>
-    </script>
+    <script src="js/5.크기,색상,내용지정해서등록하기.js"></script>
 </body>
 </html>
