--- a/3_Javascript/JS문제집/4.체크된과일개수세기.html
+++ b/3_Javascript/JS문제집/4.체크된과일개수세기.html
@@ -41,7 +41,6 @@
         <!-- 사과 3개 바나나 2개 메론 1개 총합 17000원 -->
     </div>
 
-    <script>
-    </script>
+    <script src="js/4.체크된과일개수세기.js"></script>
 </body>
 </html>
