--- a/3_Javascript/JS문제집/6.김밥집키오스크.html
+++ b/3_Javascript/JS문제집/6.김밥집키오스크.html
@@ -139,12 +139,21 @@
     <footer>
         <h2>장바구니</h2>
         <div id="empty-cart">장바구니가 비어 있습니다.</div>
-        <div id="cart"></div>
+        <div id="cart">
+            <!-- <div class="cart-item">
+                <span>튀김</span>
+                <div class="quantity">
+                    <button>-</button>
+                    <span>1</span>
+                    <button>+</button>
+                </div>
+                <span>x</span>  
+            </div> -->
+        </div>
         <div id="total">합계: ₩0</div>
     </footer>
 
-    <script>
-    </script>
+    <script src="js/6.김밥집키오스크.js"></script>
 
 </body>
 </html>
